--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "week-1/answer-homework-2/lib/forge-std"]
 	path = week-1/answer-homework-2/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "week-1/answer-homework-4/valid-solidity/lib/forge-std"]
+	path = week-1/answer-homework-4/valid-solidity/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
