--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "week-1/answer-homework-4/valid-solidity/lib/forge-std"]
 	path = week-1/answer-homework-4/valid-solidity/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "ctf/lib/forge-std"]
+	path = ctf/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
